--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "export": "npm run build && next export"
-
   },
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1"
