--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
     "next": "9.3.6",
+    "nextjs-sitemap-generator": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
