text corrections and added react spring

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
     "next": "9.3.6",
+    "nextjs-fonts": "^0.22.0",
     "nextjs-sitemap-generator": "^1.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-spring": "^8.0.27"
   }
 }
